[package]
name = "skull"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
# lalrpop-util = "0.19.8"
regex = "1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
  "llvm14-0",
] }
