[package]
name = "kaleidoscope"
version = "0.1.0"
authors = ["Mathias Hörtnagl <m.hoertnagl@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
regex = "1"
llvm-sys = "130"
